# system-recommender-service

./: .dockerignore  .env.example  .gitignore  README.md  cloudbuild.yaml  config.py  docker-compose.yaml  dockerfile  pyproject.toml
benchmark/: load_test.py  main.py
benchmark_results/: detailed_report.md  load_test_report.md
config/: __init__.py  firestore_config.py  settings.py
recommender/: __init__.py  config.py  feature_processor.py  interaction.py  main.py  recommender.py  service.py  subject_embeddings.py  tf_recommender.py  utils.py
script/: config.py  convert_embeddings.py  get_learner_ids.py  init_db.py  seeder.py  test_firestore_emu.py
