[project]
name = "system-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "asyncpg>=0.30.0",
    "faker>=30.8.2",
    "fastapi>=0.115.4",
    "gensim>=4.3.3",
    "granian>=1.6.3",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydantic-settings>=2.6.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tensorflow-recommenders>=0.7.2",
    "tensorflow>=2.17.0",
    "uvicorn>=0.32.0",
]
