[project]
name = "system-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "fastapi>=0.115.4",
    "gensim>=4.3.3",
    "google-auth>=2.36.0",
    "google-cloud-firestore>=2.19.0",
    "google>=3.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydantic-settings>=2.6.1",
    "tensorflow>=2.17.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "asyncpg>=0.30.0",
    "faker>=30.8.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "tabulate>=0.9.0",
]
