[project]
name = "system-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.4",
    "gensim>=4.3.3",
    "granian>=1.6.3",
    "numpy>=1.26.4",
    "pydantic-settings>=2.6.1",
    "tensorflow>=2.17.0",
    "uvicorn>=0.32.0",
    "vowpalwabbit>=9.10.0",
]

[tool.uv]
dev-dependencies = [
    # For benchmarking and load testing
    "aiohttp>=3.10.10",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",

    # For data seeding and testing
    "tqdm>=4.67.0",
    "faker>=30.8.2",
]
